# Race_simulator

./: .gitignore  CMakeLists.txt  racing_simulator.cpp
DYNAMIC_LIB/: Boots.cpp  Boots.h  Broom.cpp  Broom.h  CMakeLists.txt  Camel.cpp  Camel.h  Centaur.cpp  Centaur.h  Eagle.cpp  Eagle.h  Fly_object.cpp  Fly_object.h  Ground_object.cpp  Ground_object.h  Hyper_Camel.cpp  Hyper_Camel.h  Magic_carpet.cpp  Magic_carpet.h  Race_object.cpp  Race_object.h
