cmake_minimum_required (VERSION 3.10)
set(CMAKE_CCX_STANDART 20)
set(CMAKE_CXX_STANDART_REQUIRED True)
project(Race_simulator)
set(CMAKE_WINDOWS_EXPORT_ALL_SYMBOLS ON)
include_directories(DYNAMIC_LIB)
set(SOURCE_EXE racing_simulator.cpp)
add_executable(Race_simulator ${SOURCE_EXE})
add_subdirectory(DYNAMIC_LIB)
target_link_libraries(Race_simulator DYNAMIC_LIB)